--- a/src/gui/dialogs/qfiledialog.ui
+++ b/src/gui/dialogs/qfiledialog.ui
@@ -169,7 +169,14 @@
      <property name="orientation" >
       <enum>Qt::Horizontal</enum>
      </property>
-     <widget class="QSidebar" name="sidebar" />
+     <widget class="QSidebar" name="sidebar">
+      <property name="accessibleName">
+       <string>Sidebar</string>
+      </property>
+      <property name="accessibleDescription">
+       <string>List of places and bookmarks</string>
+      </property>
+     </widget>
      <widget class="QFrame" name="frame" >
       <property name="frameShape" >
        <enum>QFrame::NoFrame</enum>
@@ -216,7 +223,11 @@
             <number>0</number>
            </property>
            <item>
-            <widget class="QFileDialogListView" name="listView" />
+            <widget class="QFileDialogListView" name="listView">
+             <property name="accessibleName">
+              <string>Files</string>
+             </property>
+            </widget>
            </item>
           </layout>
          </widget>
@@ -238,7 +249,11 @@
             <number>0</number>
            </property>
            <item>
-            <widget class="QFileDialogTreeView" name="treeView" />
+            <widget class="QFileDialogTreeView" name="treeView">
+             <property name="accessibleName">
+              <string>Files</string>
+             </property>
+            </widget>
            </item>
           </layout>
          </widget>
@@ -345,11 +360,11 @@
   <tabstop>listModeButton</tabstop>
   <tabstop>detailModeButton</tabstop>
   <tabstop>sidebar</tabstop>
+  <tabstop>treeView</tabstop>
   <tabstop>listView</tabstop>
   <tabstop>fileNameEdit</tabstop>
-  <tabstop>fileTypeCombo</tabstop>
   <tabstop>buttonBox</tabstop>
-  <tabstop>treeView</tabstop>
+  <tabstop>fileTypeCombo</tabstop>
  </tabstops>
  <resources/>
  <connections/>
