--- a/tests/auto/qimagereader/qimagereader.qrc
+++ b/tests/auto/qimagereader/qimagereader.qrc
@@ -64,6 +64,7 @@
         <file>images/corrupt.svg</file>
         <file>images/corrupt.svgz</file>
         <file>images/qtbug13653-no_eoi.jpg</file>
+        <file>images/txts.jpg</file>
         <file>images/txts.png</file>
         <file>images/test-flag.tga</file>
         <file>images/test-flag-rle.tga</file>
